Fixed minimal height in layout, Fixed after scrolling background is static, in one place Logo now are visible

--- a/fake-instagram-react-ts/src/layout/App/App.scss
+++ b/fake-instagram-react-ts/src/layout/App/App.scss
@@ -7,8 +7,8 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 100%;
-
+  height: 100vh;
+  overflow-y: scroll;
   // /* // Small devices (landscape phones, 576px and up)
   // @media (min-width: 576px) { ... }
   // // Medium devices (tablets, 768px and up)
