--- a/fake-instagram-react-ts/src/layout/Layout/Layout.scss
+++ b/fake-instagram-react-ts/src/layout/Layout/Layout.scss
@@ -3,7 +3,8 @@ $prim: #FFF2;
 .Layout {
     margin: 0 auto;
     width: 1200px;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     background-color: $prim;
     color: #fff;
 }
